Home: fixed overflow-y

--- a/static/css/home.scss
+++ b/static/css/home.scss
@@ -31,6 +31,7 @@ html, body {
         border: none;
         box-shadow: inset 0 0 8px #e7e7e7;
         height: 100%;
+        overflow-y: auto;
         padding: 1em;
         width: 100%;
       }
@@ -46,6 +47,7 @@ html, body {
         border-left: 4px double #e7e7e7;
         box-shadow: inset 0 0 8px #e7e7e7;
         height: 100%;
+        overflow-y: auto;
         padding: 1em;
         width: 100%;
       }
